Add some images and classes on css, need to check the documents.html

--- a/css/style.css
+++ b/css/style.css
@@ -472,6 +472,15 @@ mark,
   max-width: 100%;
   height: auto;
 }
+.img-university {
+  width: 50%;
+  height: auto;
+}
+
+.img-certifies {
+  max-width: 100%;
+  height: auto;
+}
 
 .img-thumbnail {
   padding: 0.25rem;
